Mobile calculator hero: prevent heading overflow, reduce font-size, improve subtitle/description readability

--- a/calculator.html
+++ b/calculator.html
@@ -473,20 +473,21 @@
             <div class="container">
 
                 <h1 style="
-                    font-size: 4rem !important;
+                    font-size: 3.2rem !important;
                     font-weight: 300 !important;
                     font-family: 'Cormorant Garamond', serif !important;
                     color: #d4af37 !important;
-                    margin: 2rem 0 !important;
+                    margin: 2rem 0 1rem 0 !important;
                     text-align: center !important;
                     display: block !important;
                     visibility: visible !important;
                     opacity: 1 !important;
-                    line-height: 1.2 !important;
-                ">КАЛЬКУЛЯТОР РОСКОШИ</h1>
+                    line-height: 1.1 !important;
+                    word-break: break-word !important;
+                ">КАЛЬКУЛЯТОР</h1>
                 <p class="page-subtitle">Честный расчет стоимости без скрытых платежей</p>
                 <div class="hero-description">
-                    <p>Наш премиальный калькулятор учитывает все составляющие идеального события: аренду эксклюзивных площадок, изысканные меню, профессиональный сервис и координацию. Полная прозрачность на каждом этапе планирования.</p>
+                    <p>Простой калькулятор учитывает основные статьи: аренда площадки, меню, сборы и сервис. Понятно, прозрачно и без лишних слов.</p>
                 </div>
             </div>
         </section>
