Calculator hero text layout: left-align and constrain width on mobile; wording tweak

--- a/calculator.html
+++ b/calculator.html
@@ -487,7 +487,7 @@
                 ">КАЛЬКУЛЯТОР</h1>
                 <p class="page-subtitle">Честный расчет стоимости без скрытых платежей</p>
                 <div class="hero-description">
-                    <p>Простой калькулятор учитывает основные статьи: аренда площадки, меню, сборы и сервис. Понятно, прозрачно и без лишних слов.</p>
+                    <p>Простой калькулятор учитывает основные статьи: аренда площадки, меню, сборы и сервис. Всё прозрачно и по делу — без лишних слов.</p>
                 </div>
             </div>
         </section>
