Team: replace placeholders with real members (Марина, Карина, Ксения); use uploaded images; keep placeholder for Ксения

--- a/team.html
+++ b/team.html
@@ -309,134 +309,46 @@
                 <div class="team-grid luxury-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <div class="placeholder-image">
-                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <defs>
-                                        <linearGradient id="teamCrownGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-                                            <stop offset="0%" style="stop-color:#ffd700;stop-opacity:1" />
-                                            <stop offset="50%" style="stop-color:#d4af37;stop-opacity:1" />
-                                            <stop offset="100%" style="stop-color:#b8860b;stop-opacity:1" />
-                                        </linearGradient>
-                                    </defs>
-                                    <path d="M10 42L14 24L22 34L30 18L38 34L46 24L50 42L48 48H12L10 42Z" fill="url(#teamCrownGrad)" stroke="#b8860b" stroke-width="1.5"/>
-                                    <circle cx="14" cy="24" r="4" fill="#ffd700" stroke="#d4af37" stroke-width="0.8"/>
-                                    <circle cx="30" cy="18" r="5" fill="#ffd700" stroke="#d4af37" stroke-width="0.8"/>
-                                    <circle cx="46" cy="24" r="4" fill="#ffd700" stroke="#d4af37" stroke-width="0.8"/>
-                                    <rect x="12" y="42" width="36" height="6" fill="#d4af37" stroke="#b8860b" stroke-width="0.8"/>
-                                    <circle cx="18" cy="30" r="2" fill="#ffffff" opacity="0.9"/>
-                                    <circle cx="30" cy="26" r="2.5" fill="#ffffff" opacity="0.9"/>
-                                    <circle cx="42" cy="30" r="2" fill="#ffffff" opacity="0.9"/>
-                                    <path d="M18 44L24 44L26 46L30 44L34 46L36 44L42 44" stroke="#ffd700" stroke-width="1.5" fill="none"/>
-                                    <circle cx="30" cy="12" r="2" fill="#ffd700" opacity="0.8"/>
-                                </svg>
-                                <p>Анна Соколова</p>
-                            </div>
+                            <img src="images/Фролова-Богацкая Марина.JPG" alt="Фролова-Богацкая Марина" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="member-info">
-                            <h3 class="member-name">Анна Соколова</h3>
-                            <p class="member-role">Основательница и Креативный директор</p>
-                            <div class="member-credentials">
-                                <span class="credential">MBA Business Management, Лондон</span>
-                                <span class="credential">8+ лет в luxury event-индустрии</span>
-                                <span class="credential">500+ премиум событий</span>
+                            <h3 class="member-name">Фролова-Богацкая Марина</h3>
+                            <p class="member-role">Главный декоратор</p>
+                            <div class="member-description">
+                                <p>Привет! Я Марина — твой свадебный декоратор. Я вижу свою задачу не просто в украшении пространства, а в создании атмосферы, которая отражает уникальную историю любви каждой пары.</p>
+                                <p>Моя работа начинается с глубокого понимания их видения, мечты и стиля. Я стремлюсь не просто следовать тенденциям, а создавать нечто особенное, что будет резонировать с их сердцами. И самое главное – чтобы в каждом элементе декора читалась их личная история.</p>
                             </div>
-                            <p class="member-description">
-                                Анна — визионер нашего агентства и автор концепции "luxury без компромиссов". 
-                                Образование в Лондоне, стажировки в ведущих event-агентствах Европы, личные 
-                                контакты с топовыми поставщиками. Организовывала свадьбы для олигархов, 
-                                корпоративы для Fortune 500, частные события знаменитостей.
-                            </p>
+                        </div>
+                    </div>
+
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <img src="images/Муратова Карина.JPG" alt="Муратова Карина" style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
+                        <div class="member-info">
+                            <h3 class="member-name">Муратова Карина</h3>
+                            <p class="member-role">Основатель творческого проекта KRASIVO и организатор самых ярких встреч</p>
+                            <div class="member-description">
+                                <p>Я режиссер, и для меня концепция и идея ивента очень важны. Праздник – это не про «хлеба и зрелищ», а про чувство стиля и отражение виновника торжества в каждой детали.</p>
+                                <p>А еще любой праздник – это про любовь: к работе, к себе, к партнеру, к родителям и ко всему, что нравится моим заказчикам. Я рядом не только как профессионал, но и как обычный человек, который поддержит, выслушает или просто поболтает о важных для вас вещах.</p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="team-member">
                         <div class="member-photo">
                             <div class="placeholder-image">
-                                <span>🎨</span>
-                                <p>Михаил Петров</p>
+                                <span>✍️</span>
+                                <p>Новикова Ксения</p>
                             </div>
                         </div>
                         <div class="member-info">
-                            <h3 class="member-name">Михаил Петров</h3>
-                            <p class="member-role">Арт-директор и Концепт-дизайнер</p>
-                            <div class="member-credentials">
-                                <span class="credential">Школа дизайна Parsons, Нью-Йорк</span>
-                                <span class="credential">6+ лет в luxury дизайне</span>
-                                <span class="credential">Международные награды</span>
+                            <h3 class="member-name">Новикова Ксения</h3>
+                            <p class="member-role">Контент-менеджер</p>
+                            <div class="member-description">
+                                <p>Сделаю лучшую рекламу вашего торжества! Хотите, чтобы ваше торжество запомнилось гостям навсегда? Нужна яркая реклама, которая привлечёт внимание и создаст настроение?</p>
+                                <p>Я сделаю всё возможное, чтобы ваша свадьба, день рождения или корпоратив стали событием года. Подготовлю стильный и эффектный рекламный текст, подчеркну уникальность мероприятия и смогу обеспечить максимальный интерес гостей. Следите за нашими соцсетями, где вы будете главными звездами масштабных событий!</p>
                             </div>
-                            <p class="member-description">
-                                Михаил превращает пространства в сказку. Его портфолио включает оформление 
-                                показов Mercedes-Benz Fashion Week, частных вилл миллиардеров в Монако, 
-                                эксклюзивных party в Куршевеле. Создаёт не просто декор — он создаёт 
-                                атмосферу, которая остаётся в памяти на всю жизнь.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="team-member">
-                        <div class="member-photo">
-                            <div class="placeholder-image">
-                                <span>💫</span>
-                                <p>Елена Васильева</p>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h3 class="member-name">Елена Васильева</h3>
-                            <p class="member-role">Директор по клиентскому сервису</p>
-                            <div class="member-credentials">
-                                <span class="credential">Сертификат Ritz-Carlton Service</span>
-                                <span class="credential">5+ лет в luxury hospitality</span>
-                                <span class="credential">Fluent English, French</span>
-                            </div>
-                            <p class="member-description">
-                                Елена — ваш персональный консьерж в мире роскошных событий. Стажировалась 
-                                в отелях Four Seasons и Ritz-Carlton, владеет техниками luxury-сервиса. 
-                                Работала с Forbes-миллиардерами, Arab royalty, 
-                                голливудскими звёздами. Говорит на 4 языках.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="team-member">
-                        <div class="member-photo">
-                            <div class="placeholder-image">
-                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <defs>
-                                        <linearGradient id="teamLightningGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-                                            <stop offset="0%" style="stop-color:#ffd700;stop-opacity:1" />
-                                            <stop offset="50%" style="stop-color:#d4af37;stop-opacity:1" />
-                                            <stop offset="100%" style="stop-color:#b8860b;stop-opacity:1" />
-                                        </linearGradient>
-                                    </defs>
-                                    <path d="M30 5L18 25L28 25L22 50L42 22L32 22L30 5Z" fill="url(#teamLightningGrad)" stroke="#b8860b" stroke-width="1.5"/>
-                                    <path d="M30 8L20 23L26 23L24 40L38 24L34 24L30 8Z" fill="#ffffff" opacity="0.7"/>
-                                    <circle cx="30" cy="15" r="2" fill="#ffd700"/>
-                                    <circle cx="25" cy="30" r="1.5" fill="#ffffff" opacity="0.8"/>
-                                    <circle cx="35" cy="30" r="1.5" fill="#ffffff" opacity="0.8"/>
-                                    <path d="M15 20L20 25" stroke="#d4af37" stroke-width="1" opacity="0.6"/>
-                                    <path d="M40 25L45 30" stroke="#d4af37" stroke-width="1" opacity="0.6"/>
-                                    <path d="M20 45L25 50" stroke="#d4af37" stroke-width="1" opacity="0.6"/>
-                                    <circle cx="12" cy="18" r="1" fill="#d4af37" opacity="0.5"/>
-                                    <circle cx="48" cy="32" r="1" fill="#d4af37" opacity="0.5"/>
-                                    <circle cx="18" cy="48" r="1" fill="#d4af37" opacity="0.5"/>
-                                </svg>
-                                <p>Дмитрий Козлов</p>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h3 class="member-name">Дмитрий Козлов</h3>
-                            <p class="member-role">Технический продюсер и Шоу-директор</p>
-                            <div class="member-credentials">
-                                <span class="credential">Ex-Cirque du Soleil Production</span>
-                                <span class="credential">10+ лет в event technology</span>
-                                <span class="credential">Сертификат AVIXA CTS</span>
-                            </div>
-                            <p class="member-description">
-                                Дмитрий — технический гений, который делает невозможное возможным. 
-                                Работал продюсером в Cirque du Soleil, координировал технику на 
-                                Олимпийских играх, создавал шоу для мировых брендов. Когда другие 
-                                говорят "это невозможно", Дмитрий находит решение.
-                            </p>
                         </div>
                     </div>
                 </div>
