Team: add Фролов-Богацкий Антон (Главный звукорежиссер) with photo and bio

--- a/team.html
+++ b/team.html
@@ -351,6 +351,22 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <img src="images/Фролов-Богацкий Антон.JPG" alt="Фролов-Богацкий Антон" style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
+                        <div class="member-info">
+                            <h3 class="member-name">Фролов-Богацкий Антон</h3>
+                            <p class="member-role">Главный звукорежиссер</p>
+                            <div class="member-description">
+                                <p>Меня зовут Антон, и я — опытный диджей, специализирующийся на свадебных торжествах.</p>
+                                <p>Каждый момент свадьбы должен быть наполнен уникальной атмосферой, а музыкальное сопровождение играет в этом ключевую роль.</p>
+                                <p>Я располагаю качественным оборудованием, которое обеспечит прекрасный звук и атмосферное освещение.</p>
+                                <p>Моя задача — создать идеальный саундтрек для вашего самого важного дня. Давайте сделаем этот день особенным вместе!</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
