Team: add Муратов Артем (Руководитель фотоотдела) with photo and bio

--- a/team.html
+++ b/team.html
@@ -367,6 +367,20 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <img src="images/Муратов Артем.jpg" alt="Муратов Артем" style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
+                        <div class="member-info">
+                            <h3 class="member-name">Муратов Артем</h3>
+                            <p class="member-role">Руководитель фотоотдела</p>
+                            <div class="member-description">
+                                <p>Я тот человек, которого никогда нет на фотографиях торжества, но благодаря мне создаются уникальные, привлекающие внимание фото, которые надолго остаются в памяти. Могу организовать работу так, чтобы каждый участник команды вносил вклад в общий успех проекта.</p>
+                                <p>Благодаря снимкам мы создаем вашу историю и запечатлеваем самые яркие, веселые, трогательные и романтические моменты!</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
