Fix: rename Anton's photo to ASCII and update path in team.html

--- a/team.html
+++ b/team.html
@@ -354,7 +354,7 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="images/Фролов-Богацкий Антон.JPG" alt="Фролов-Богацкий Антон" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="images/anton-frolov-bogatskiy.jpg" alt="Фролов-Богацкий Антон" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Фролов-Богацкий Антон</h3>
