Team hero: replace description with client-provided text about quality and reputation

--- a/team.html
+++ b/team.html
@@ -271,7 +271,7 @@
                 ">НАША КОМАНДА</h1>
                 <p class="page-subtitle">Опытная команда профессионалов</p>
                 <div class="hero-description">
-                    <p>В KRASIVO работают исключительно мастера своего дела — профессионалы с международным опытом, которые создавали события для VIP-клиентов и знаменитостей. Каждый член нашей команды прошёл строгий отбор и обладает безупречной репутацией в luxury-сегменте.</p>
+                    <p>У нас работают настоящие профессионалы! Для нас важна хорошая репутация, поэтому мы не стремимся проводить большое количество мероприятий одновременно. Нам важно качество каждого события! Ваш праздник будет особенным, потому что мы уделяем время каждому!</p>
                 </div>
             </div>
         </section>
