Team stats: update numbers and labels (200 событий, 8 лет, 100 клиентов, VIP без изменений)

--- a/team.html
+++ b/team.html
@@ -280,15 +280,15 @@
             <div class="container">
                 <div class="stats-grid">
                     <div class="stat-item luxury-stat">
-                        <div class="stat-number" data-target="500">500+</div>
-                        <div class="stat-label">Премиум событий</div>
+                        <div class="stat-number" data-target="200">200</div>
+                        <div class="stat-label">Событий</div>
                     </div>
                     <div class="stat-item luxury-stat">
-                        <div class="stat-number" data-target="15">15</div>
-                        <div class="stat-label">Лет совершенства</div>
+                        <div class="stat-number" data-target="8">8</div>
+                        <div class="stat-label">Лет качественной работы</div>
                     </div>
                     <div class="stat-item luxury-stat">
-                        <div class="stat-number" data-target="100">100%</div>
+                        <div class="stat-number" data-target="100">100</div>
                         <div class="stat-label">Довольных клиентов</div>
                     </div>
                     <div class="stat-item luxury-stat">
