--- a/team.html
+++ b/team.html
@@ -147,15 +147,25 @@
         }
 
         .hero-description {
-            max-width: 800px;
-            margin: var(--spacing-lg) auto 0;
-            text-align: center;
+            max-width: 680px !important;
+            margin: var(--spacing-md) auto 0 !important;
+            padding: 0 var(--spacing-md) !important;
+            text-align: left !important;
         }
 
         .hero-description p {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            color: var(--color-gray-dark);
+            font-size: 1.1rem !important;
+            line-height: 1.7 !important;
+            color: var(--color-gray-dark) !important;
+            margin: 0 !important;
+            hyphens: auto;
+            text-wrap: pretty;
+        }
+
+        @media (max-width: 768px) {
+            .hero-description {
+                max-width: 620px !important;
+            }
         }
 
         .member-credentials {
