--- a/team.html
+++ b/team.html
@@ -147,19 +147,19 @@
         }
 
         .hero-description {
-            max-width: 680px !important;
+            max-width: 720px !important;
             margin: var(--spacing-md) auto 0 !important;
             padding: 0 var(--spacing-md) !important;
-            text-align: left !important;
+            text-align: center !important;
         }
 
         .hero-description p {
             font-size: 1.1rem !important;
             line-height: 1.7 !important;
             color: var(--color-gray-dark) !important;
-            margin: 0 !important;
-            hyphens: auto;
-            text-wrap: pretty;
+            margin: 0 auto !important;
+            hyphens: none;
+            text-wrap: balance;
         }
 
         @media (max-width: 768px) {
