--- a/team.html
+++ b/team.html
@@ -150,16 +150,16 @@
             max-width: 720px !important;
             margin: var(--spacing-md) auto 0 !important;
             padding: 0 var(--spacing-md) !important;
-            text-align: center !important;
+            text-align: left !important;
         }
 
         .hero-description p {
             font-size: 1.1rem !important;
             line-height: 1.7 !important;
             color: var(--color-gray-dark) !important;
-            margin: 0 auto !important;
-            hyphens: none;
-            text-wrap: balance;
+            margin: 0 !important;
+            hyphens: auto;
+            text-wrap: pretty;
         }
 
         @media (max-width: 768px) {
