Team hero description: final fix - center align, 600px width, clean line spacing

--- a/team.html
+++ b/team.html
@@ -147,19 +147,18 @@
         }
 
         .hero-description {
-            max-width: 720px !important;
-            margin: var(--spacing-md) auto 0 !important;
+            max-width: 600px !important;
+            margin: var(--spacing-lg) auto 0 !important;
             padding: 0 var(--spacing-md) !important;
-            text-align: left !important;
+            text-align: center !important;
         }
 
         .hero-description p {
             font-size: 1.1rem !important;
-            line-height: 1.7 !important;
+            line-height: 1.6 !important;
             color: var(--color-gray-dark) !important;
             margin: 0 !important;
-            hyphens: auto;
-            text-wrap: pretty;
+            word-spacing: normal;
         }
 
         @media (max-width: 768px) {
