Team page updates: fix hero description alignment, add member signatures, add geography section, update About section text on homepage

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                 </svg>
                             </div>
                             <h3>Совершенство</h3>
-                            <p>Мы доводим каждую деталь до идеала, создавая события, которые превосходят самые смелые ожидания.</p>
+                            <p>Красиво и дорого – это не про большой бюджет, а про умение грамотно распорядиться деньгами. Поэтому мы поможем избежать ненужных трат, предлагая наиболее рациональные решения.</p>
                         </div>
                     </div>
                     <div class="about-visual">
