--- a/team.html
+++ b/team.html
@@ -147,10 +147,10 @@
         }
 
         .hero-description {
-            max-width: 600px !important;
-            margin: var(--spacing-lg) auto 0 !important;
-            padding: 0 var(--spacing-md) !important;
-            text-align: center !important;
+            max-width: 100% !important;
+            margin: var(--spacing-lg) 0 0 0 !important;
+            padding: 0 var(--spacing-sm) !important;
+            text-align: left !important;
         }
 
         .hero-description p {
@@ -158,13 +158,26 @@
             line-height: 1.6 !important;
             color: var(--color-gray-dark) !important;
             margin: 0 !important;
-            word-spacing: normal;
+            max-width: 100%;
         }
 
         @media (max-width: 768px) {
             .hero-description {
                 max-width: 620px !important;
             }
+        }
+
+        /* Member signature styles */
+        .member-signature {
+            font-style: italic !important;
+            font-size: 0.95rem !important;
+            color: var(--color-gold) !important;
+            text-align: right !important;
+            margin-top: 1rem !important;
+            padding-top: 0.75rem !important;
+            border-top: 1px solid rgba(212, 175, 55, 0.2) !important;
+            font-weight: 500 !important;
+            letter-spacing: 0.02em !important;
         }
 
         .member-credentials {
@@ -326,6 +339,7 @@
                             <div class="member-description">
                                 <p>Привет! Я Марина — твой свадебный декоратор. Я вижу свою задачу не просто в украшении пространства, а в создании атмосферы, которая отражает уникальную историю любви каждой пары.</p>
                                 <p>Моя работа начинается с глубокого понимания их видения, мечты и стиля. Я стремлюсь не просто следовать тенденциям, а создавать нечто особенное, что будет резонировать с их сердцами. И самое главное – чтобы в каждом элементе декора читалась их личная история.</p>
+                                <p class="member-signature">Марина Фролова-Богацкая</p>
                             </div>
                         </div>
                     </div>
@@ -340,6 +354,7 @@
                             <div class="member-description">
                                 <p>Я режиссер, и для меня концепция и идея ивента очень важны. Праздник – это не про «хлеба и зрелищ», а про чувство стиля и отражение виновника торжества в каждой детали.</p>
                                 <p>А еще любой праздник – это про любовь: к работе, к себе, к партнеру, к родителям и ко всему, что нравится моим заказчикам. Я рядом не только как профессионал, но и как обычный человек, который поддержит, выслушает или просто поболтает о важных для вас вещах.</p>
+                                <p class="member-signature">Карина Муратова</p>
                             </div>
                         </div>
                     </div>
@@ -357,6 +372,7 @@
                             <div class="member-description">
                                 <p>Сделаю лучшую рекламу вашего торжества! Хотите, чтобы ваше торжество запомнилось гостям навсегда? Нужна яркая реклама, которая привлечёт внимание и создаст настроение?</p>
                                 <p>Я сделаю всё возможное, чтобы ваша свадьба, день рождения или корпоратив стали событием года. Подготовлю стильный и эффектный рекламный текст, подчеркну уникальность мероприятия и смогу обеспечить максимальный интерес гостей. Следите за нашими соцсетями, где вы будете главными звездами масштабных событий!</p>
+                                <p class="member-signature">Ксения Новикова</p>
                             </div>
                         </div>
                     </div>
@@ -373,6 +389,7 @@
                                 <p>Каждый момент свадьбы должен быть наполнен уникальной атмосферой, а музыкальное сопровождение играет в этом ключевую роль.</p>
                                 <p>Я располагаю качественным оборудованием, которое обеспечит прекрасный звук и атмосферное освещение.</p>
                                 <p>Моя задача — создать идеальный саундтрек для вашего самого важного дня. Давайте сделаем этот день особенным вместе!</p>
+                                <p class="member-signature">Антон Фролов-Богацкий</p>
                             </div>
                         </div>
                     </div>
@@ -387,9 +404,26 @@
                             <div class="member-description">
                                 <p>Я тот человек, которого никогда нет на фотографиях торжества, но благодаря мне создаются уникальные, привлекающие внимание фото, которые надолго остаются в памяти. Могу организовать работу так, чтобы каждый участник команды вносил вклад в общий успех проекта.</p>
                                 <p>Благодаря снимкам мы создаем вашу историю и запечатлеваем самые яркие, веселые, трогательные и романтические моменты!</p>
+                                <p class="member-signature">Артем Муратов</p>
                             </div>
                         </div>
                     </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- География работы -->
+        <section class="geography-section" style="padding: var(--spacing-xxl) 0; background: linear-gradient(135deg, var(--color-light) 0%, rgba(156, 169, 134, 0.1) 100%);">
+            <div class="container">
+                <div class="section-header">
+                    <span class="section-badge">ГЕОГРАФИЯ</span>
+                    <h2 class="section-title luxury-title">Работаем по всему миру</h2>
+                </div>
+                <div class="geography-card" style="max-width: 600px; margin: 0 auto; text-align: center; padding: var(--spacing-lg); background: rgba(255, 255, 255, 0.8); border-radius: 15px; border: 1px solid rgba(201, 176, 55, 0.2);">
+                    <div style="font-size: 3rem; margin-bottom: var(--spacing-md);">🌍</div>
+                    <p style="font-size: 1.1rem; line-height: 1.6; color: var(--color-gray-dark); margin-bottom: var(--spacing-sm);">Организуем события в различных городах России, а также проводим свадебные торжества в Турции.</p>
+                    <p style="font-size: 1rem; color: var(--color-gray-medium); margin: 0;">Наша команда готова организовать ваше событие в любой точке мира, где вы мечтаете его провести.</p>
                 </div>
             </div>
         </section>
