--- a/team.html
+++ b/team.html
@@ -331,22 +331,7 @@
                 <div class="team-grid luxury-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="images/Фролова-Богацкая Марина.JPG" alt="Фролова-Богацкая Марина" style="width: 100%; height: 100%; object-fit: cover;">
-                        </div>
-                        <div class="member-info">
-                            <h3 class="member-name">Фролова-Богацкая Марина</h3>
-                            <p class="member-role">Главный декоратор</p>
-                            <div class="member-description">
-                                <p>Привет! Я Марина — твой свадебный декоратор. Я вижу свою задачу не просто в украшении пространства, а в создании атмосферы, которая отражает уникальную историю любви каждой пары.</p>
-                                <p>Моя работа начинается с глубокого понимания их видения, мечты и стиля. Я стремлюсь не просто следовать тенденциям, а создавать нечто особенное, что будет резонировать с их сердцами. И самое главное – чтобы в каждом элементе декора читалась их личная история.</p>
-                                <p class="member-signature">Марина Фролова-Богацкая</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="team-member">
-                        <div class="member-photo">
-                            <img src="images/Муратова Карина.JPG" alt="Муратова Карина" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="images/Муратова Карина.JPG" alt="Муратова Карина" style="width: 100%; height: 100%; object-fit: cover; object-position: center top;">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Муратова Карина</h3>
@@ -355,6 +340,21 @@
                                 <p>Я режиссер, и для меня концепция и идея ивента очень важны. Праздник – это не про «хлеба и зрелищ», а про чувство стиля и отражение виновника торжества в каждой детали.</p>
                                 <p>А еще любой праздник – это про любовь: к работе, к себе, к партнеру, к родителям и ко всему, что нравится моим заказчикам. Я рядом не только как профессионал, но и как обычный человек, который поддержит, выслушает или просто поболтает о важных для вас вещах.</p>
                                 <p class="member-signature">Карина Муратова</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <img src="images/Фролова-Богацкая Марина.JPG" alt="Фролова-Богацкая Марина" style="width: 100%; height: 100%; object-fit: cover; object-position: center top;">
+                        </div>
+                        <div class="member-info">
+                            <h3 class="member-name">Фролова-Богацкая Марина</h3>
+                            <p class="member-role">Главный декоратор</p>
+                            <div class="member-description">
+                                <p>Привет! Я Марина — твой свадебный декоратор. Я вижу свою задачу не просто в украшении пространства, а в создании атмосферы, которая отражает уникальную историю любви каждой пары.</p>
+                                <p>Моя работа начинается с глубокого понимания их видения, мечты и стиля. Я стремлюсь не просто следовать тенденциям, а создавать нечто особенное, что будет резонировать с их сердцами. И самое главное – чтобы в каждом элементе декора читалась их личная история.</p>
+                                <p class="member-signature">Марина Фролова-Богацкая</p>
                             </div>
                         </div>
                     </div>
@@ -379,7 +379,7 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="images/anton-frolov-bogatskiy.jpg" alt="Фролов-Богацкий Антон" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="images/anton-frolov-bogatskiy.jpg" alt="Фролов-Богацкий Антон" style="width: 100%; height: 100%; object-fit: cover; object-position: center top;">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Фролов-Богацкий Антон</h3>
@@ -396,7 +396,7 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="images/Муратов Артем.jpg" alt="Муратов Артем" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="images/Муратов Артем.jpg" alt="Муратов Артем" style="width: 100%; height: 100%; object-fit: cover; object-position: center top;">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Муратов Артем</h3>
